# cmakevisualstudio

./: .appveyor.yml  CMakeLists.txt  Project1.sln  README.md  Source.cpp  appveyor.yml  install.ps1  main.cpp
ci/: main.cpp
cmake/: FindGSL.cmake  FindPyUIC.cmake  FindSqlite3.cmake
